# decklink-c

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  list.c  output_colour.c  output_fading_colour.c
generator/: Cargo.toml
generator/src/: class.rs  main.rs  misc.rs  util.rs
include/: api.h  common.h  custom.h  decklink_c.h  device.h  display_mode.h  enums.h  frame.h  frame_conversion.h  iterator.h  types.h  util.h
interop/Win/include/: DeckLinkAPI.idl  DeckLinkAPIConfiguration.idl  DeckLinkAPIDeckControl.idl  DeckLinkAPIDiscovery.idl  DeckLinkAPIModes.idl  DeckLinkAPIStreaming.idl  DeckLinkAPITypes.idl  DeckLinkAPI_v7_1.idl
src/: api.cpp  callbacks.cpp  callbacks.h  copy.h  custom.cpp  decklink_api.h  decklink_c.cpp  decklink_c.h  device.cpp  device.h  display_mode.cpp  frame.cpp  frame_conversion.cpp  iterator.cpp  iterator.h  platform.h  structs.h  types.h  util.cpp  util.h
